# nn_weathermap

./: .gitignore  README.md  pyproject.toml
nn_weathermap/etc/: nn_weathermap_uwsgi.service  uwsgi.conf
nn_weathermap/src/ai/: index_search.py  nn.py
nn_weathermap/src/app/: app.ini  app.py
nn_weathermap/templates/: index.html
